; ModuleID = '/home/carl/AnghaBench/timescaledb/src/extr_chunk_constraint.c_init_scan_by_chunk_id_constraint_name.c'
source_filename = "/home/carl/AnghaBench/timescaledb/src/extr_chunk_constraint.c_init_scan_by_chunk_id_constraint_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i32 }

@CHUNK_CONSTRAINT = common dso_local global i32 0, align 4
@CHUNK_CONSTRAINT_CHUNK_ID_CONSTRAINT_NAME_IDX = common dso_local global i32 0, align 4
@Anum_chunk_constraint_chunk_id_constraint_name_idx_chunk_id = common dso_local global i32 0, align 4
@BTEqualStrategyNumber = common dso_local global i32 0, align 4
@F_INT4EQ = common dso_local global i32 0, align 4
@Anum_chunk_constraint_chunk_id_constraint_name_idx_constraint_name = common dso_local global i32 0, align 4
@F_NAMEEQ = common dso_local global i32 0, align 4
@namein = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_6__*, i32, i8*)* @init_scan_by_chunk_id_constraint_name to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @init_scan_by_chunk_id_constraint_name(%struct.TYPE_6__* %0, i32 %1, i8* %2) #0 {
  %4 = alloca %struct.TYPE_6__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %7 = call i32 (...) @ts_catalog_get()
  %8 = load i32, i32* @CHUNK_CONSTRAINT, align 4
  %9 = load i32, i32* @CHUNK_CONSTRAINT_CHUNK_ID_CONSTRAINT_NAME_IDX, align 4
  %10 = call i32 @catalog_get_index(i32 %7, i32 %8, i32 %9)
  %11 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %12 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %12, i32 0, i32 0
  store i32 %10, i32* %13, align 4
  %14 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %15 = load i32, i32* @Anum_chunk_constraint_chunk_id_constraint_name_idx_chunk_id, align 4
  %16 = load i32, i32* @BTEqualStrategyNumber, align 4
  %17 = load i32, i32* @F_INT4EQ, align 4
  %18 = load i32, i32* %5, align 4
  %19 = call i32 @Int32GetDatum(i32 %18)
  %20 = call i32 @ts_scan_iterator_scan_key_init(%struct.TYPE_6__* %14, i32 %15, i32 %16, i32 %17, i32 %19)
  %21 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %22 = load i32, i32* @Anum_chunk_constraint_chunk_id_constraint_name_idx_constraint_name, align 4
  %23 = load i32, i32* @BTEqualStrategyNumber, align 4
  %24 = load i32, i32* @F_NAMEEQ, align 4
  %25 = load i32, i32* @namein, align 4
  %26 = load i8*, i8** %6, align 8
  %27 = call i32 @CStringGetDatum(i8* %26)
  %28 = call i32 @DirectFunctionCall1(i32 %25, i32 %27)
  %29 = call i32 @ts_scan_iterator_scan_key_init(%struct.TYPE_6__* %21, i32 %22, i32 %23, i32 %24, i32 %28)
  ret void
}

declare dso_local i32 @catalog_get_index(i32, i32, i32) #1

declare dso_local i32 @ts_catalog_get(...) #1

declare dso_local i32 @ts_scan_iterator_scan_key_init(%struct.TYPE_6__*, i32, i32, i32, i32) #1

declare dso_local i32 @Int32GetDatum(i32) #1

declare dso_local i32 @DirectFunctionCall1(i32, i32) #1

declare dso_local i32 @CStringGetDatum(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
